--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,8 +1,11 @@
+@font-face {
+  font-family: eightBitFont;
+  src: url('./assets/font/8bitoperator.ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: eightBitFont;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
