--- a/front-end/src/config/tiles.css
+++ b/front-end/src/config/tiles.css
@@ -189,11 +189,11 @@
     background: url('../assets/map/tiles_packed.png') -160px -112px;
 }
 
-.stump-1 {
+.stump-1-obs {
     background: url('../assets/map/tiles_packed.png') -176px -112px;
 }
 
-.stump-2 {
+.stump-2-obs {
     background: url('../assets/map/tiles_packed.png') -192px -112px;
 }
 
@@ -300,4 +300,12 @@
 
 .grass-c-tl-tr {
     background: url('../assets/map/tiles_packed.png') -112px -64px;
+}
+
+.treasure-obs {
+    background: url('../assets/map/treasure_chests.png') -16px -0px;
+}
+
+.treasure2-obs {
+    background: url('../assets/map/treasure_chests.png') -16px -32px;
 }
