--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,3 +60,10 @@ input {
   opacity: 0;
   pointer-events: none;
 }
+
+button {
+  background-color: rgb(41, 38, 52);
+  color: white;
+  font-family: 'eightBitFont';
+  font-size: 1rem;
+}
